--- a/sketch.css
+++ b/sketch.css
@@ -1,15 +1,20 @@
 * {
   background-color: black;
   box-sizing: border-box;
-  margin: 0 auto;
+}
+
+body {
+  display: flex;
+  justify-content: center;
 }
 
 .title {
+  padding: 50px;
   color: white;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .red-title {
-  font-size: 5rem;
+  font-size: 3.3rem;
   color: red;
 }
