Added background color

--- a/sketch.css
+++ b/sketch.css
@@ -1,9 +1,9 @@
 * {
-  background-color: black;
   box-sizing: border-box;
 }
 
 body {
+  background-color: black;
   display: flex;
   justify-content: center;
 }
@@ -17,4 +17,28 @@ body {
 .red-title {
   font-size: 3.3rem;
   color: red;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+button.btn {
+  width: 200px;
+  height: 50px;
+  background: black;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+button.btn:hover {
+  background: white;
+  color: black;
 }
