--- a/sketch.css
+++ b/sketch.css
@@ -52,3 +52,19 @@ button.btn:hover {
   background: white;
   color: black;
 }
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+  width: 300px;
+  height: 300px;
+  background: white;
+  gap: 1px;
+}
+.block {
+  background: white;
+  border: 1px solid black;
+  grid-column: span 2;
+  grid-row: span 2;
+}
