--- a/sketch.css
+++ b/sketch.css
@@ -54,17 +54,16 @@ button.btn:hover {
 }
 
 .board {
+  margin-top: 200px;
+  width: 440px;
+  height: 440px;
+  background: #fff;
   display: grid;
+  outline: 1px solid black;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(16, 1fr);
-  width: 300px;
-  height: 300px;
-  background: white;
-  gap: 1px;
 }
-.block {
-  background: white;
-  border: 1px solid black;
-  grid-column: span 2;
-  grid-row: span 2;
+.cell {
+  background: #fff;
+  border: 1px solid #000;
 }
