--- a/sketch.css
+++ b/sketch.css
@@ -69,6 +69,8 @@ button.btn:hover {
   border: 1px solid #ccc;
 }
 
-id {
+.id {
   align-items: center;
+  display: flex;
+  justify-self: center;
 }
