--- a/sketch.css
+++ b/sketch.css
@@ -80,7 +80,8 @@ button.btn:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 6px;
+  margin-bottom: 15px;
 }
 
 .range-box {
