--- a/sketch.css
+++ b/sketch.css
@@ -84,6 +84,15 @@ button.btn:hover {
   margin-bottom: 15px;
 }
 
+#background {
+  width: 60px;
+  height: 60px;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  border-radius: 6px;
+}
+
 .range-box {
   display: flex;
   flex-direction: column;
