--- a/sketch.css
+++ b/sketch.css
@@ -85,16 +85,14 @@ button.btn:hover {
 }
 
 #background {
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 40px;
   border: none;
   cursor: pointer;
-  padding: 0;
   border-radius: 6px;
 }
 
 .picker-box label {
-  color: white;
   font-size: 14px;
 }
 
@@ -103,4 +101,8 @@ button.btn:hover {
   flex-direction: column;
   align-items: center;
   gap: 5px;
+}
+
+.sizeValue {
+  color: #fff;
 }
